--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.2.1",
     "tailwindcss": "^3.4.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.4",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
