--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/rss": "^4.0.3",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.2.1",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "preact": "^10.19.3",
     "tailwindcss": "^3.4.1"
   },
